Extracting common logic into GeoIpFileService and add factory for the specific implementations.